syntax = "proto3";

package api.storage.v1;

option go_package = "github.com/logsquaredn/geocloud/api/storage/v1;storagev1";

message GetStorageRequest {
    string id = 1;
}

message GetStorageResponse {
    bytes data = 1;
}

message CreateStorageRequest {
    bytes data = 1;
}

message CreateStorageResponse {
    string id = 1;
}

service StorageService {
    rpc GetStorage(GetStorageRequest) returns (stream GetStorageResponse) {}
    rpc CreateStorage(stream CreateStorageRequest) returns (CreateStorageResponse) {}
}