syntax = "proto3";

package rototiller.api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/logsquaredn/rototiller/pkg/api";

message Storage {
  string id = 1;
  string owner_id = 2;
  string name = 3;
  string status = 4;
  google.protobuf.Timestamp last_used = 8;
  google.protobuf.Timestamp create_time = 9;
}

message GetStoragesRequest {}

message GetStoragesResponse {
  repeated Storage storages = 1;
}

message GetStorageRequest {
  string id = 1;
}

message GetStorageResponse {
  Storage storage = 1;
}

service StorageService {
  rpc GetStorages(GetStoragesRequest) returns (GetStoragesResponse) {}
  rpc GetStorage(GetStorageRequest) returns (GetStorageResponse) {}
}
